<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/popular_sub_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/anonymous" />

    <TextView
        android:id="@+id/popular_sub_writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_sub_writer"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/popular_sub_title"
        app:layout_constraintStart_toEndOf="@+id/popular_sub_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/written_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_sub_written_date"
        app:layout_constraintBottom_toTopOf="@+id/popular_sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popular_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/sub_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popular_sub_profile" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_content"
        android:textSize="14sp"
        android:ellipsize="end"
        android:padding="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popular_sub_title" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/popular_sub_bulletin_name"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="댓글 수"
        android:textColor="#00bfff"
        android:padding="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/comment_ballon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:srcCompat="@drawable/comment" />

    <TextView
        android:id="@+id/tunmbs_up_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="좋아요 수"
        android:textColor="#dc143c"
        android:padding="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/comment_ballon" />

    <ImageView
        android:id="@+id/thumbs_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tunmbs_up_count"
        app:srcCompat="@drawable/thumbs_up" />



</androidx.constraintlayout.widget.ConstraintLayout>